--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "description": "Example showing how to use ES6 Modules today",
   "version": "1.0.0",
   "main": "config.js",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-imagemin": "^4.1.0",
+    "jasmine": "^3.2.0"
+  },
   "scripts": {
     "test": "gulp test"
   },
@@ -38,27 +41,25 @@
   },
   "devDependencies": {
     "del": "^2.1.0",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-esdoc": "^0.2.0",
+    "gulp-connect": "^5.6.1",
+    "gulp-esdoc": "^0.4.1",
     "gulp-html-replace": "^1.5.5",
     "gulp-htmlmin": "^1.3.0",
-    "gulp-imagemin": "^2.4.0",
     "gulp-jsdoc": "^0.1.5",
-    "gulp-jspm": "^0.5.5",
+    "gulp-jspm": "^0.5.13",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-minify-css": "^1.2.2",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
-    "gulp-webdriver": "^1.0.2",
-    "imagemin-pngquant": "^4.2.0",
-    "jasmine": "^2.3.2",
+    "gulp-sass": "^4.0.1",
+    "gulp-webdriver": "^2.0.3",
+    "imagemin-pngquant": "^6.0.0",
     "require-dir": "^0.3.0",
     "sassdoc": "^2.1.15",
-    "selenium-standalone": "^4.7.2",
+    "selenium-standalone": "^6.15.3",
     "systemjs": "^0.19.6",
     "webdrivercss": "^2.0.0-beta-rc1",
-    "webdriverio": "^2.4.5"
+    "webdriverio": "^4.13.2"
   }
 }
